@@ -1,5 +1,6 @@
 import os.path
 import mimetypes
+import urllib
 
 from plone.namedfile.interfaces import IBlobby
 
@@ -44,13 +45,10 @@ def set_headers(file, response, filename=None):
     response.setHeader("Content-Length", file.getSize())
 
     if filename is not None:
-        try:
-            response.setHeader("Content-Disposition", "attachment; filename=\"%s\"" % filename)
-        except UnicodeEncodeError:
-            # It's 2012, the time where the world can handle non-ascii
-            # chars in http headers has not arrived fully yet
-            # http://stackoverflow.com/questions/1361604/how-to-encode-utf8-filename-for-http-headers-python-django
-            pass
+        if not isinstance(filename, unicode):
+            filename = unicode(filename, 'utf-8', errors="ignore")
+        filename = urllib.quote(filename.encode("utf8"))
+        response.setHeader("Content-Disposition", "attachment; filename*=UTF-8''%s" % filename)
 
 def stream_data(file):
     """Return the given file as a stream if possible.
